name:                ads
version:             0.1.0.0
synopsis:            An EDSL for making authenticated data structures such as Merkle trees.
description:         An embedding of the language described in "Authenticated Data Structures, Generically" by Andrew Miller et al into Haskell.
license:             BSD2
license-file:        LICENSE
author:              Derek Elkins
maintainer:          derek.a.elkins@gmail.com
copyright:           Copyright (c) 2015 Derek Elkins
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Authenticated, Data.Authenticated.Generic, Data.Authenticated.Fix
  other-modules:       Data.Authenticated.Example
  other-extensions:    GeneralizedNewtypeDeriving, FlexibleInstances, FlexibleContexts, EmptyDataDecls, TypeFamilies, UndecidableInstances
  build-depends:       base >=4.8 && <4.9, mtl >=2.2 && <2.3, bytestring >=0.10 && <0.11, cryptonite(==0.5)
  -- hs-source-dirs:      
  default-language:    Haskell2010
